fixing the horizontal overflow

--- a/bootstrap/css/custom style.css
+++ b/bootstrap/css/custom style.css
@@ -6,14 +6,14 @@
     
 }
 body{
-  background-color:  rgb(217, 197, 236);;
+  background-color:  rgb(217, 197, 236);
+  overflow-x: hidden;
 }
 .navbar{
     padding: 2px;
 }
-#navbarNav{
-  overflow-x: hidden
-}
+
+
 
 .navbar-brand{
     font-weight: bold;
